<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorites"
        android:enabled="true"
        android:icon="@drawable/heart"
        android:title="@string/favorites"
        app:cnb_backgroundColor="#223561"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/heat"
        android:title="@string/home"
        app:cnb_backgroundColor="#223561"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:cnb_backgroundColor="#223561"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

</menu>