<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mybooks.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mybooks.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mybooks.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mybooks.bottom_navigation_ui.HomeFragment"
        android:label="fragment_home2"
        tools:layout="@layout/fragment_home2" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.example.mybooks.bottom_navigation_ui.UserFragment"
        android:label="fragment_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/likeFragment"
        android:name="com.example.mybooks.bottom_navigation_ui.LikeFragment"
        android:label="fragment_like"
        tools:layout="@layout/fragment_like" />
</navigation>